# ainovel

./: .gitignore  CMakeLists.txt  README.md
include/: audio_processor.hpp  binary_protocol.hpp  llm_client.hpp  novel_assistant.hpp  novel_websocket.hpp  speech_client.hpp  tts_client.hpp  vad_processor.hpp  websocket_server.hpp
src/: binary_protocol.cpp  main.cpp  websocket_server.cpp
